--- a/css/login-register.css
+++ b/css/login-register.css
@@ -7,13 +7,28 @@
     font-family: 'Poppins', sans-serif;
 }
 
+/* Estilos para el contenedor del GIF de carga */
+#loader {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+  
+
 
 body{
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url(./background.jpg) no-repeat;
+    background: url(../img/background.jpg) no-repeat;
     background-size: cover;
     background-position: center;
 }
