--- a/css/login-register.css
+++ b/css/login-register.css
@@ -1,29 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
+:root {
+    --color-white: #fff;
+    --color-light-blue: #538cd7;
+    --color-dark: #333;
+    --color-light-shadow: rgba(255, 255, 255, 0.2);
+    --color-dark-shadow: rgba(0, 0, 0, 0.2);
+    --color-btn-shadow: rgba(0, 0, 0, 0.1);
+}
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 
-/* Estilos para el contenedor del GIF de carga */
-#loader {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
+html {
+    font-size: 16px;
 }
-  
 
-
-body{
+body {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,101 +30,116 @@ body{
     background-position: center;
 }
 
-.wrapper{
-    width: 420px;
+.wrapper {
+    width: 26.25rem;
     background: transparent;
-    border: 2px solid rgba(255,255,255,0.2);
-    backdrop-filter: blur(20px);
-    box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    color: #fff;
-    border-radius: 10px;
-    padding: 30px 40px ;
+    border: 0.125rem solid var(--color-light-shadow);
+    backdrop-filter: blur(1.25rem);
+    box-shadow: 0 0 0.625rem var(--color-dark-shadow);
+    color: var(--color-white);
+    border-radius: 0.625rem;
+    padding: 1.875rem 2.5rem;
 }
 
-.wrapper h1{
-    font-size: 36px;
+.wrapper h1 {
+    font-size: 2.25rem;
     text-align: center;
 }
 
-.wrapper .input-box{
+.wrapper .input-box {
     position: relative;
     width: 100%;
-    height: 50px;
-    margin: 30px 0;
+    height: 3.125rem;
+    margin: 1.875rem 0;
 }
 
-.input-box input{
+.input-box input {
     width: 100%;
     height: 100%;
     background: transparent;
     border: none;
     outline: none;
-    border: 2px solid rgba(255,255,255,0.2);
-    border-radius: 40px;
-    font-size: 16px;
-    color: #fff;
-    padding: 20px 45px 20px 20px;
+    border: 0.125rem solid var(--color-light-shadow);
+    border-radius: 2.5rem;
+    font-size: 1rem;
+    color: var(--color-white);
+    padding: 1.25rem 2.8125rem 1.25rem 1.25rem;
 }
 
-.input-box input::placeholder{
-    color: #fff;
+.input-box input::placeholder {
+    color: var(--color-white);
 }
 
-.input-box i{
+.input-box i {
     position: absolute;
-    right: 20px;
+    right: 1.25rem;
     top: 50%;
     transform: translateY(-50%);
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
-.wrapper .remember-forgot{
+.wrapper .remember-forgot {
     display: flex;
     justify-content: space-between;
-    font-size: 14.5px;
-    margin: -15px 0 15px;
+    font-size: 0.90625rem;
+    margin: -0.9375rem 0 0.9375rem;
 }
 
-.remember-forgot label input{
-    accent-color: #fff;
-    margin-right: 3px;
+.remember-forgot label input {
+    accent-color: var(--color-white);
+    margin-right: 0.1875rem;
 }
 
-.remember-forgot a{
-    color: #fff;
+.remember-forgot a {
+    color: var(--color-white);
     text-decoration: none;
 }
 
-.remember-forgot a:hover{
+.remember-forgot a:hover {
     text-decoration: underline;
 }
 
-.wrapper .btn{
+.wrapper .btn {
     width: 100%;
-    height: 45px;
-    background: #fff;
+    height: 2.8125rem;
+    background: var(--color-white);
     border: none;
     outline: none;
-    border-radius: 40px;
-    box-shadow: 0 0 10px  rgb(0, 0, 0, .1);
+    border-radius: 2.5rem;
+    box-shadow: 0 0 0.625rem var(--color-btn-shadow);
     cursor: pointer;
-    font-size: 16px;
-    color: #333;
+    font-size: 1rem;
+    color: var(--color-dark);
     font-weight: 600;
 }
 
-.wrapper .register-link{
-    font-size: 14.5px;
-    text-align: center;
-    margin: 20px 0 15px;
+.btn:hover {
+    background-color: var(--color-light-blue);
+    color: var(--color-white);
 }
 
-.register-link p a{
-    color: #fff;
+.wrapper .register-link {
+    font-size: 0.90625rem;
+    text-align: center;
+    margin: 1.25rem 0 0.9375rem;
+}
+
+.register-link p a {
+    color: var(--color-white);
     text-decoration: none;
     font-weight: 600;
 }
 
-.register-link p a:hover{
+.register-link p a:hover {
     text-decoration: underline;
+}
+
+@media (max-width: 500px) {
+    html {
+        font-size: 12px;
+    }
+
+    body {
+        background-position: left;
+    }
 }
